k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: altar-trader-hub
  labels:
    name: altar-trader-hub
